# ai-track

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  futurethings.md  pyproject.toml
.github/workflows/: ci.yml
src/aitrack/: __main__.py  cli.py  config.py
src/aitrack/collectors/: __init__.py  base.py  generic.py  kiro.py  opencode.py
src/aitrack/commands/: cost.py  discover.py  export_.py  reset.py  scan.py  sessions.py  stats.py  status.py  watch.py
src/aitrack/dashboard/: __init__.py  live_app.py
src/aitrack/database/: __init__.py  models.py  repository.py
src/aitrack/models/: __init__.py  discovery.py  pricing.py  usage_record.py
src/aitrack/utils/: __init__.py  formatters.py  logging.py  pricing.py
tests/: conftest.py  test_collectors.py  test_commands.py  test_database.py  test_models.py  test_pricing.py  test_utils.py
