[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-track"
version = "1.0.0"
description = "Local-first AI token usage tracker for coding assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Ayush" },
]
keywords = ["ai", "tokens", "usage", "cost", "cli", "opencode", "kiro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "textual>=0.52",
    "watchdog>=3.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "tiktoken>=0.7",
]

[project.urls]
Homepage = "https://github.com/ayushks1ngh/ai-track"
Repository = "https://github.com/ayushks1ngh/ai-track"
Issues = "https://github.com/ayushks1ngh/ai-track/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
aitrack = "aitrack.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aitrack*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
]
ignore = [
    "E501",  # line too long
    "B008",  # function call in default argument
    "PLW1514", # using .format() instead of f-string
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src/aitrack"]
omit = ["tests/*", "*/__init__.py"]
